--- a/02_assignments/assignment_1.ipynb
+++ b/02_assignments/assignment_1.ipynb
@@ -56,88 +56,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This is a function, which we will learn more about next week. For testing purposes, we will write our code in the function\n",
     "def anagram_checker(word_a, word_b):\n",
-    "\n",
-    "  sorted_word_a = sorted(word_a.lower())\n",
-    "  sorted_word_b = sorted(word_b.lower())\n",
-    "  return sorted_word_a == sorted_word_b\n",
+    "  # Your code here\n",
     "\n",
     "# Run your code to check using the words below:\n",
-    "anagram_checker(\"Silent\", \"listen\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "anagram_checker(\"Silent\", \"Night\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "anagram_checker(\"Slient\", \"listen\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "anagram_checker(\"Slient\", \"Night\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "anagram_checker(\"night\", \"Thing\")"
    ]
@@ -153,60 +97,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Modified my code to test for case sensitivity\n",
-    "\n",
     "def anagram_checker(word_a, word_b, is_case_sensitive):\n",
-    "    if not is_case_sensitive:\n",
-    "        word_a = word_a.lower()\n",
-    "        word_b = word_b.lower()\n",
-    "    \n",
-    "    sorted_word_a = sorted(word_a)\n",
-    "    sorted_word_b = sorted(word_b)\n",
-    "    return sorted_word_a == sorted_word_b\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "  # Modify your existing code here\n",
+    "\n",
     "# Run your code to check using the words below:\n",
-    "anagram_checker(\"Slient\", \"listen\", False)"
+    "anagram_checker(\"Slient\", \"listen\", False) # True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "anagram_checker(\"Slient\", \"Listen\", True) # False"
    ]
@@ -238,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
