--- a/02_assignments/assignment_1.ipynb
+++ b/02_assignments/assignment_1.ipynb
@@ -158,7 +158,7 @@
    "outputs": [],
    "source": [
     "#Modified my code to test for case sensitivity\n",
-    "\n",
+    "#new code\n",
     "def anagram_checker(word_a, word_b, is_case_sensitive):\n",
     "    if not is_case_sensitive:\n",
     "        word_a = word_a.lower()\n",
